<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_event_black_18dp"
            android:title="@string/nav_upcoming" />
        <item
            android:id="@+id/nav_History"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/nav_History" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:icon="@drawable/ic_file_upload_black_24dp"

                android:id="@+id/nav_sync"
                android:title="@string/nav_sync" />
            <item
                android:icon="@drawable/ic_airport_shuttle_black_24dp"

                android:id="@+id/nav_log_out"
                android:title="@string/log_out" />
        </menu>
    </item>

</menu>