<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ViewEditTrip"
    android:background="@color/background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/consAddTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:fontFamily="serif"
            android:text="@string/trip_details"
            android:textColor="@color/redCar"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tripName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"

            app:endIconMode="custom"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:startIconDrawable="@drawable/ic_trip">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:ems="10"
                android:enabled="false"
                android:hint="@string/triptitle"
                android:inputType="textPersonName"
                android:text="nn"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/startPoint"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"

            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:counterMaxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:startIconDrawable="@drawable/ic_location">

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">


            <fragment
                android:id="@+id/spoint1"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/endPoint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            app:counterEnabled="true"
            app:counterMaxLength="20"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            app:layout_constraintTop_toBottomOf="@+id/textView3"

            app:startIconDrawable="@drawable/ic_location">

            <fragment
                android:id="@+id/epoint1"
                android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </androidx.cardview.widget.CardView>
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tripdate"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endPoint"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:ems="10"
                android:enabled="false"

                android:inputType="date"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_date"
            android:enabled="false"
            android:tooltipText="@string/date"
            app:layout_constraintStart_toEndOf="@id/tripdate"
            app:layout_constraintTop_toBottomOf="@+id/endPoint"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".1" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/triptime"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            app:layout_constraintStart_toEndOf="@+id/addDate"
            app:layout_constraintTop_toBottomOf="@+id/endPoint"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="#FFFFFF"
                android:ems="10"
                android:enabled="false"
                android:inputType="time"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/addTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/ic_time"
            android:enabled="false"
            android:tooltipText="@string/time"
            app:layout_constraintStart_toEndOf="@id/triptime"
            app:layout_constraintTop_toBottomOf="@+id/endPoint"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".1" />

        <Button
            android:id="@+id/repeat"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/ic_repeat"
            android:tooltipText="@string/repeat"
            app:layout_constraintEnd_toEndOf="@id/addTime"
            app:layout_constraintTop_toBottomOf="@+id/triptime"
            app:layout_constraintWidth_default="percent"
            app:layout_constraintWidth_percent=".1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes"
            android:textColor="@color/textcolor"
            android:textColorHint="@color/textcolor"
            app:layout_constraintBottom_toTopOf="@id/tripnotes"
            app:layout_constraintStart_toStartOf="@id/tripnotes" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tripnotes"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:counterEnabled="true"
            app:counterMaxLength="100"

            app:endIconMode="custom"

            app:hintEnabled="false"
            app:layout_constraintStart_toStartOf="@id/endPoint"
            app:layout_constraintTop_toBottomOf="@+id/tripdate">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/notes"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="#FFFFFF"
                android:ems="10"
                android:enabled="false"
                android:inputType="textMultiLine"
                android:text="@string/date"
                android:textColor="@color/textcolor"
                android:textColorHint="@color/textcolor" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/roundTrip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/roundtrip"
            android:textColor="@color/textcolor"
            android:textColorHighlight="#FFFFFF"
            app:layout_constraintStart_toStartOf="@id/tripnotes"
            app:layout_constraintTop_toBottomOf="@id/tripnotes" />

        <Button
            android:id="@+id/add"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/edit_trip"
            android:textColor="@color/textcolor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/roundTrip" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="8dp"
            android:text="From"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tripName" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:text="To"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/startPoint" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>